--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
 			<br><br><br><br><br>
 			<!-- *************************** Modify the tree in the table below! *************************** -->
 			<table>
-				<td><layer-node layer='c' abb='C'></layer-node></td>
+				<td><layer-node layer='p' abb='P'></layer-node></td>
 			</table><table>
 				<td><button class="treeNode hidden"></button></td>
 			</table><table>
-				<td v-if="player.tab=='tree'&&(player.c.unl||player.c.unl)" class="left"><br><br><img class="remove" src="remove.png" onclick="resetRow(1)"></img></td>
+				<td v-if="player.tab=='tree'&&(player.p.unl||player.p.unl)" class="left"><br><br><img class="remove" src="remove.png" onclick="resetRow(1)"></img></td>
 				<td><layer-node layer='f' abb='F'></layer-node></td>
 			</table><table>
 				<td><button class="treeNode hidden"></button></td>
