--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 	<script>
 		const modInfo = {
-			name: "The Modding Tree",
-			id: "modbase",
+			name: "Uptake Tree",
+			id: "uptaketree",
 			pointsName: "points"
 		}
 	</script>
@@ -131,8 +131,8 @@
 			</table><table>
 				<td><button class="treeNode hidden"></button></td>
 			</table><table>
-				<td v-if="player.tab=='tree'&&(player.c.unl||player.c.unl)" class="left"><br><br><img class="remove" src="remove.png" onclick="resetRow(1)"></img></td>
-				<td><layer-node layer='c' abb='C'></layer-node></td>
+				<td v-if="player.tab=='tree'&&(player.e.unl||player.e.unl)" class="left"><br><br><img class="remove" src="remove.png" onclick="resetRow(1)"></img></td>
+				<td><layer-node layer='e' abb='E'></layer-node></td>
 			</table><table>
 				<td><button class="treeNode hidden"></button></td>
 			</table>
