--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <head>
 	<script>
 		const modInfo = {
-			name: "Uptake Tree",
-			id: "uptaketree",
-			pointsName: "points"
+			name: "The Modding Tree",
+			id: "modbase",
+			pointsName: "points",
+			offlineLimit: 1  // In hours
 		}
 	</script>
 	<title>The Modding Tree</title>
@@ -12,9 +13,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
 	<script type="text/javascript" src="js/break_eternity.js"></script>
+	<script type="text/javascript" src="js/layerSupport.js"></script>
 	<script type="text/javascript" src="js/layers.js"></script>
 	<script type="text/javascript" src="js/temp.js"></script>
 	<script type="text/javascript" src="js/saves.js"></script>
+	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/game.js"></script>
 	<script type="text/javascript" src="js/v.js"></script>
 	<script type="text/javascript" src="js/canvas.js"></script>
@@ -43,7 +46,14 @@
 		<div v-if="player.tab=='changelog'" class="col right">
 			<button class="back" onclick="showTab('tree')">←</button><br>
 
-			
+			<h3>v1.2: This Changes Everything!</h3>
+			<ul>
+				<li>Many layer features can now be static values or functions. (This made some notations change, which will break things)</li>
+				<li>You can now use the "this" keyword, to make code easier to transfer when making new layers. Also added "this.layer", which is the current layer's name, and works on existing subfeatures (e.g. individual upgrades) as well! Subfeatures also have "this.id".</li>
+				<li>Fixed a big save issue. If you use a unique mod id, your save will never conflict with other mods.</li>
+				<li>Added a configurable offline time limit in modinfo at the top of index.html. (default 1 hour)</li>
+				<li>Added a few minor features, and updated the docs with new information.</li>
+			</ul><br>
 			<h3>v1.1.1</h3>
 			<ul>
 				<li>You can define hotkeys in layer config.</li>
@@ -131,7 +141,7 @@
 			</table><table>
 				<td><button class="treeNode hidden"></button></td>
 			</table><table>
-				<td v-if="player.tab=='tree'&&(player.e.unl||player.e.unl)" class="left"><br><br><img class="remove" src="remove.png" onclick="resetRow(1)"></img></td>
+				<td v-if="player.tab=='tree'&&(player['p'].unl||player['p'].unl)" class="left"><br><br><img class="remove" src="remove.png" onclick="resetRow(1)"></img></td>
 				<td><layer-node layer='e' abb='E'></layer-node></td>
 			</table><table>
 				<td><button class="treeNode hidden"></button></td>
@@ -139,7 +149,7 @@
 			<canvas id="treeCanvas" class="canvas"></canvas>
 		</div>
 		<div v-for="layer in LAYERS">
-			<div v-if="player.tab==layer" v-bind:class="'col right'" v-bind:style="layers[layer].style ? layers[layer].style : {}">
+			<div v-if="player.tab==layer" v-bind:class="'col right'" v-bind:style="tmp.style[layer] ? tmp.style[layer] : {}">
 				<button class="back" onclick="showTab('tree')">←</button><br><br><br>
 				<div v-if="!layers[layer].tabFormat">
 					<main-display :layer="layer"></main-display>
