--- a/index.html
+++ b/index.html
@@ -49,34 +49,11 @@
 		</div>
 		<div v-if="player.tab=='changelog'" class="col right">
 			<button class="back" onclick="showTab('tree')">←</button><br><br><br>
-			<h3>v1.3.3</h3>
+			<h3>v0.0.1</h3>
 			<ul>
-				<li>Fix for the "order of operations" issue in temp.</li>
+				<li>Initial release of the mod, with two rows of content.</li>
 			</ul><br>
-			<h3>v1.3.1</h3>
-			<ul>
-				<li>Added custom CSS and tooltips for Layer Nodes.</li>
-				<li>Added custom CSS for upgrades, buyables, milestones, and challenges, both individually and layer-wide.</li>
-				<li>You can now use HTML in most display text!</li>
-				<li>You can now make milestones unlockable and not display immediately.</li>
-				<li>Fixed importing saves, and issue with upgrades not appearing, and probably more.</li>
-				<li>Optional "name" layer feature, used in confirmation messages.</li>
-				<li></li>
-			</ul><br>
-			<h3>v1.3: Tabception... ception!</h3>
-			<ul>
-				<li>Added subtabs! And also a Micro-tab component to let you make smaller subtab-esque areas anywhere.</li>
-				<li>Added a "custom" prestige formula type, and a number of features to support it.</li>
-				<li>Added points/sec display (can be disabled, automatically disabled if getPointGen is 0).</li>
-				<li>Added h-line, v-line and image-display components, plus components for individual upgrades, challenges, and milestones.</li>
-				<li>Added upgEffect, buyableEffect, and challEffect functions.</li>
-				<li>Added "hide completed challenges" setting.</li>
-				<li>Moved old changelogs to a separate place.</li>
-				<li>Fixed hasMilestone and incr_order.</li>
-				<li>Static layers now show the currency amount needed for the next one if you can buy max.</li>
-				<li></li>
-			</ul><br>
-			<a href="https://github.com/Acamaeda/The-Modding-Tree/blob/master/changelog.md" target="_blank" class="link" >Full history</a><br>
+			<a href="https://github.com/Acamaeda/The-Modding-Tree/blob/master/changelog.md" target="_blank" class="link" >Modding Tree changelog</a><br>
 		</div>
 		
 		<div v-if="player.tab=='info'" class="col right">
@@ -85,9 +62,11 @@
 			<br>
 			<h3>{{VERSION.withName}}</h3>
 			<br>
-			The Modding Tree by Acamaeda
+			The Burning Tree by thefinaluptake
 			<br>
 			The Prestige Tree made by Jacorb and Aarex
+			<br>
+			Made with The Modding Tree by Acamaeda
 			<br>
 			Original idea by papyrus (on discord)
 			<br><br>
